--- a/public/static/index.html
+++ b/public/static/index.html
@@ -3,7 +3,7 @@
 		<title>The Donation Hub</title>
 		<link href="/i/favicon.png" rel="Shortcut Icon" />
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,700" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="css/site.css" />
+		<link rel="stylesheet" type="text/css" href="/static/css/site.css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	</head>
 	<body>
@@ -46,7 +46,7 @@
 			<section id="home_theater">
 				<ul class="theater_list">
 					<li>
-						<div class="theater_bkg_img" style="background-image: url(i/hero_img1.jpg);"></div>
+						<div class="theater_bkg_img" style="background-image: url(/static/i/hero_img1.jpg);"></div>
 						<div class="action_text">conserve wildlife</div>
 						<div class="theater_content">
 							<h2 class="theater_content_title">
@@ -62,7 +62,7 @@
 						<div class="scroll_indicator"></div>
 					</li>
 					<li>
-						<div class="theater_bkg_img" style="background-image: url(i/hero_img2.jpg);"></div>
+						<div class="theater_bkg_img" style="background-image: url(/static/i/hero_img2.jpg);"></div>
 						<div class="action_text">provide clean water</div>
 						<div class="theater_content">
 							<h2 class="theater_content_title">
@@ -77,7 +77,7 @@
 						</div> <!-- /theater_content -->
 					</li>
 					<li>
-						<div class="theater_bkg_img" style="background-image: url(i/hero_img3.jpg);"></div>
+						<div class="theater_bkg_img" style="background-image: url(/static/i/hero_img3.jpg);"></div>
 						<div class="action_text">protect the envoronment</div>
 						<div class="theater_content">
 							<h2 class="theater_content_title">
@@ -118,6 +118,7 @@
 					</div>
 				</div> <!-- /section_contain -->
 			</section> <!-- /for_non-profits -->
-			<script src="js/site.js" type="text/javascript"></script>
+			<div class="lightbox_bkg"></div>
+			<script src="/static/js/site.js" type="text/javascript"></script>
 		</body>
 	</html>
