Mobile styles and scripts

--- a/public/static/index.html
+++ b/public/static/index.html
@@ -1,9 +1,14 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>The Donation Hub</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="/i/favicon.png" rel="Shortcut Icon" />
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="/static/css/site.css" />
+		<link rel="stylesheet" type="text/css" href="/static/css/responsive.css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	</head>
 	<body>
@@ -45,7 +50,7 @@
 		</div> <!-- /site_menu -->
 			<section id="home_theater">
 				<ul class="theater_list">
-					<li>
+					<li class="active">
 						<div class="theater_bkg_img" style="background-image: url(/static/i/hero_img1.jpg);"></div>
 						<div class="action_text">conserve wildlife</div>
 						<div class="theater_content">
