--- a/public/static/index.html
+++ b/public/static/index.html
@@ -81,7 +81,7 @@
 					<path class="st3" d="M80.4,39.7c-0.6,0-1.1-0.6-1.1-1.2c0-0.6,0.6-1.1,1.2-1.1c0.6,0,1.1,0.6,1.1,1.2C81.6,39.2,81,39.7,80.4,39.7"/>
 					<path class="st3" d="M47.5,8.8c-0.6,0-1.1-0.6-1.1-1.2c0-0.6,0.6-1.1,1.2-1.1c0.6,0,1.1,0.6,1.1,1.2C48.7,8.3,48.2,8.8,47.5,8.8"
 						/>
-				</g>				
+				</g>
 			</g>
 			</svg>
 		</div> <!-- /load_screen -->
@@ -204,7 +204,7 @@
 					Stay informed. Get invited to the cool parties. Receive a thoughtful note from time to time, letting you know we’re thinking of you.<br/>
 					<!-- Begin MailChimp Signup Form -->
 						<form action="https://thedonationhub.us15.list-manage.com/subscribe/post?u=0cb00031467f7267aac64bd71&amp;id=c673411e11" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-							
+
 							<div class="mc-field-group">
 								<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="SUBMIT EMAIL">
 						   	<input type="submit" value="" name="subscribe" id="mc-embedded-subscribe" class="button">
@@ -230,25 +230,25 @@
 			<ul class="footer_links">
 				<li>
 					<a href="https://www.facebook.com/thedonationhubb" target="_blank">
-						<div class="social_media_contain">						
+						<div class="social_media_contain">
 							<div class="social_media_logo" social="facebook"></div>
-							<div class="social_media_name">FACEBOOK</div>			
+							<div class="social_media_name">FACEBOOK</div>
 						</div> <!-- /social_media_contain -->
 					</a>
 				</li>
 				<li>
 					<a href="https://twitter.com/thedonationhubb" target="_blank">
-						<div class="social_media_contain">						
+						<div class="social_media_contain">
 							<div class="social_media_logo" social="twitter"></div>
-							<div class="social_media_name">TWITTER</div>			
+							<div class="social_media_name">TWITTER</div>
 						</div> <!-- /social_media_contain -->
 					</a>
 				</li>
 				<li>
 					<a href="https://www.instagram.com/thedonationhub/" target="_blank">
-						<div class="social_media_contain">						
+						<div class="social_media_contain">
 							<div class="social_media_logo" social="instagram"></div>
-							<div class="social_media_name">INSTAGRAM</div>			
+							<div class="social_media_name">INSTAGRAM</div>
 						</div> <!-- /social_media_contain -->
 					</a>
 				</li>
@@ -265,19 +265,19 @@
 
 		<div class="lb_content" lb-content="pitch_deck">
 			<div class="contact_title">REQUEST OUR PITCH DECK</div>
-			<form class="site_form" method="post">
+			<form class="pitch_deck_site_form" method="post">
 				<ul class="form_list">
 					<li>
-						<input type="text" name="name" placeholder="Name">
+						<input type="text" name="pitch_deck_name" placeholder="Name">
 					</li>
 					<li>
-						<input type="email" name="email" placeholder="Email">
+						<input type="email" name="pitch_deck_email" placeholder="Email">
 					</li>
 					<li>
-						<textarea name="message" placeholder="Message"></textarea>
+						<textarea name="pitch_deck_message" placeholder="Message"></textarea>
 					</li>
 					<li>
-						<input type="submit" value="SUBMIT" />
+						<input type="submit" value="SUBMIT" id="pitch_deck_submit" />
 					</li>
 				</ul>
 			</form>
@@ -285,19 +285,19 @@
 
 		<div class="lb_content" lb-content="sponsors">
 			<div class="contact_title">For Sponsors</div>
-			<form class="site_form" method="post">
+			<form class="sponsors_site_form" method="post">
 				<ul class="form_list">
 					<li>
-						<input type="text" name="name" placeholder="Name">
+						<input type="text" name="sponsors_name" placeholder="Name">
 					</li>
 					<li>
-						<input type="email" name="email" placeholder="Email">
+						<input type="email" name="sponsors_email" placeholder="Email">
 					</li>
 					<li>
-						<textarea name="message" placeholder="Message"></textarea>
+						<textarea name="sponsors_message" placeholder="Message"></textarea>
 					</li>
 					<li>
-						<input type="submit" value="SUBMIT" />
+						<input type="submit" value="SUBMIT" id="sponsors_submit" />
 					</li>
 				</ul>
 			</form>
@@ -305,24 +305,25 @@
 
 		<div class="lb_content" lb-content="non_profits">
 			<div class="contact_title">For Non-Profits</div>
-			<form class="site_form" method="post">
+			<form class="non_profits_site_form" method="post">
 				<ul class="form_list">
 					<li>
-						<input type="text" name="name" placeholder="Name">
+						<input type="text" name="non_profits_name" placeholder="Name">
 					</li>
 					<li>
-						<input type="email" name="email" placeholder="Email">
+						<input type="email" name="non_profits_email" placeholder="Email">
 					</li>
 					<li>
-						<textarea name="message" placeholder="Message"></textarea>
+						<textarea name="non_profits_message" placeholder="Message"></textarea>
 					</li>
 					<li>
-						<input type="submit" value="SUBMIT" />
+						<input type="submit" value="SUBMIT" id="non_profits_submit" />
 					</li>
 				</ul>
 			</form>
 		</div>
 
 		<script src="/static/js/site.js" type="text/javascript"></script>
+		<script src="/static/js/forms.js" type="text/javascript"></script>
 	</body>
 </html>
