- updated js ... passing back to aris to connect

--- a/public/static/index.html
+++ b/public/static/index.html
@@ -265,7 +265,7 @@
 
 		<div class="lb_content" lb-content="pitch_deck">
 			<div class="contact_title">REQUEST OUR PITCH DECK</div>
-			<form class="pitch_deck_site_form" method="post">
+			<form id="pitch_deck_site_form" class="site_form" method="get">
 				<ul class="form_list">
 					<li>
 						<input type="text" name="pitch_deck_name" placeholder="Name">
@@ -285,7 +285,7 @@
 
 		<div class="lb_content" lb-content="sponsors">
 			<div class="contact_title">For Sponsors</div>
-			<form class="sponsors_site_form" method="post">
+			<form id="sponsors_site_form" class="site_form" method="get">
 				<ul class="form_list">
 					<li>
 						<input type="text" name="sponsors_name" placeholder="Name">
@@ -305,7 +305,7 @@
 
 		<div class="lb_content" lb-content="non_profits">
 			<div class="contact_title">For Non-Profits</div>
-			<form class="non_profits_site_form" method="post">
+			<form id="non_profits_site_form" class="site_form" method="get">
 				<ul class="form_list">
 					<li>
 						<input type="text" name="non_profits_name" placeholder="Name">
