Added required to the text fields and style updates

--- a/public/index.html
+++ b/public/index.html
@@ -268,13 +268,13 @@
 			<form class="site_form" method="post">
 				<ul class="form_list">
 					<li>
-						<input type="text" name="name" placeholder="Name">
+						<input type="text" name="name" placeholder="Name" required="true">
 					</li>
 					<li>
-						<input type="email" name="email" placeholder="Email">
+						<input type="email" name="email" placeholder="Email" required="true">
 					</li>
 					<li>
-						<textarea name="message" placeholder="Message"></textarea>
+						<textarea name="message" placeholder="Message" required="true"></textarea>
 					</li>
 					<li>
 						<input type="submit" value="SUBMIT" />
@@ -288,13 +288,13 @@
 			<form class="site_form" method="post">
 				<ul class="form_list">
 					<li>
-						<input type="text" name="name" placeholder="Name">
+						<input type="text" name="name" placeholder="Name" required="true">
 					</li>
 					<li>
-						<input type="email" name="email" placeholder="Email">
+						<input type="email" name="email" placeholder="Email" required="true">
 					</li>
 					<li>
-						<textarea name="message" placeholder="Message"></textarea>
+						<textarea name="message" placeholder="Message" required="true"></textarea>
 					</li>
 					<li>
 						<input type="submit" value="SUBMIT" />
@@ -308,13 +308,13 @@
 			<form class="site_form" method="post">
 				<ul class="form_list">
 					<li>
-						<input type="text" name="name" placeholder="Name">
+						<input type="text" name="name" placeholder="Name" required="true">
 					</li>
 					<li>
-						<input type="email" name="email" placeholder="Email">
+						<input type="email" name="email" placeholder="Email" required="true">
 					</li>
 					<li>
-						<textarea name="message" placeholder="Message"></textarea>
+						<textarea name="message" placeholder="Message" required="true"></textarea>
 					</li>
 					<li>
 						<input type="submit" value="SUBMIT" />
