--- a/public/static/index.html
+++ b/public/static/index.html
@@ -268,13 +268,13 @@
 			<form id="pitch_deck_site_form" class="site_form" method="get">
 				<ul class="form_list">
 					<li>
-						<input type="text" name="pitch_deck_name" placeholder="Name">
+						<input type="text" name="pitch_deck_name" placeholder="Name" required="true">
 					</li>
 					<li>
-						<input type="email" name="pitch_deck_email" placeholder="Email">
+						<input type="email" name="pitch_deck_email" placeholder="Email" required="true">
 					</li>
 					<li>
-						<textarea name="pitch_deck_message" placeholder="Message"></textarea>
+						<textarea name="pitch_deck_message" placeholder="Message" required="true"></textarea>
 					</li>
 					<li>
 						<input type="submit" value="SUBMIT" id="pitch_deck_submit" />
@@ -288,13 +288,13 @@
 			<form id="sponsors_site_form" class="site_form" method="get">
 				<ul class="form_list">
 					<li>
-						<input type="text" name="sponsors_name" placeholder="Name">
+						<input type="text" name="sponsors_name" placeholder="Name" required="true">
 					</li>
 					<li>
-						<input type="email" name="sponsors_email" placeholder="Email">
+						<input type="email" name="sponsors_email" placeholder="Email" required="true">
 					</li>
 					<li>
-						<textarea name="sponsors_message" placeholder="Message"></textarea>
+						<textarea name="sponsors_message" placeholder="Message" required="true"></textarea>
 					</li>
 					<li>
 						<input type="submit" value="SUBMIT" id="sponsors_submit" />
@@ -308,13 +308,13 @@
 			<form id="non_profits_site_form" class="site_form" method="get">
 				<ul class="form_list">
 					<li>
-						<input type="text" name="non_profits_name" placeholder="Name">
+						<input type="text" name="non_profits_name" placeholder="Name" required="true">
 					</li>
 					<li>
-						<input type="email" name="non_profits_email" placeholder="Email">
+						<input type="email" name="non_profits_email" placeholder="Email" required="true">
 					</li>
 					<li>
-						<textarea name="non_profits_message" placeholder="Message"></textarea>
+						<textarea name="non_profits_message" placeholder="Message" required="true"></textarea>
 					</li>
 					<li>
 						<input type="submit" value="SUBMIT" id="non_profits_submit" />
