Connected Form submission to lightbox response

--- a/public/static/index.html
+++ b/public/static/index.html
@@ -280,6 +280,9 @@
 						<input type="submit" value="SUBMIT" id="pitch_deck_submit" />
 					</li>
 				</ul>
+				<div class="contact_response">
+					Thank you for inquring about seeing our pitch deck. We will contact you as soon as we can.
+				</div>
 			</form>
 		</div>
 
@@ -300,6 +303,9 @@
 						<input type="submit" value="SUBMIT" id="sponsors_submit" />
 					</li>
 				</ul>
+				<div class="contact_response">
+					Thank you for inquring about becoming a sponsor. We will contact you as soon as we can.
+				</div>
 			</form>
 		</div>
 
@@ -320,6 +326,9 @@
 						<input type="submit" value="SUBMIT" id="non_profits_submit" />
 					</li>
 				</ul>
+				<div class="contact_response">
+					Thank you for inquring about what we can do for non-profits. We will contact you as soon as we can.
+				</div>
 			</form>
 		</div>
 
